--- a/git/dotfiles/file/shell/.profile.html
+++ b/git/dotfiles/file/shell/.profile.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .profile (445B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .profile (473B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -27,6 +27,8 @@
 <a href="#l9" id="l9">9</a>
 <a href="#l10" id="l10">10</a>
 <a href="#l11" id="l11">11</a>
+<a href="#l12" id="l12">12</a>
+<a href="#l13" id="l13">13</a>
 </pre></td><td><pre>
 export PATH=&quot;$PATH:$HOME/.scripts&quot;
 export BSPWM_STATE=&quot;/tmp/bspwm-state.json&quot;
@@ -39,6 +41,8 @@ export GOROOT=&quot;/usr/lib/go&quot;
 test -f $HOME/.scripts/wmrc &amp;&amp; . $HOME/.scripts/wmrc
 test -f $HOME/.scripts/panelsrc &amp;&amp; . $HOME/.scripts/panelsrc
 test -f $HOME/.scripts/iconsrc &amp;&amp; . $HOME/.scripts/iconsrc
+
+. $HOME/.shell.d/export.sh
 </pre></td></tr></table>
 </div>
 </body>
