--- a/git/dotfiles/file/wmrc/.scripts/wmrc.html
+++ b/git/dotfiles/file/wmrc/.scripts/wmrc.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> wmrc (375B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> wmrc (450B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -32,6 +32,9 @@
 <a href="#l14" id="l14">14</a>
 <a href="#l15" id="l15">15</a>
 <a href="#l16" id="l16">16</a>
+<a href="#l17" id="l17">17</a>
+<a href="#l18" id="l18">18</a>
+<a href="#l19" id="l19">19</a>
 </pre></td><td><pre>
 # Environment variables for the whole desktop environment
 # (c) tudurom 2016 - wtfpl
@@ -47,6 +50,9 @@ export POPUP_FONT=Metis
 export POPUP_DURATION=5
 export GROOT=/tmp/groaw
 export GNUMBER=6
+export WALL_DIR=$HOME/wallpapers
+export WALL=sea.jpg
+export WALL_TYPE=fill
 
 # vim: set ft=sh :
 </pre></td></tr></table>
