--- a/git/dotfiles/file/x/.Xresources.html
+++ b/git/dotfiles/file/x/.Xresources.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .Xresources (412B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .Xresources (408B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -34,7 +34,7 @@
 ! managed like they are supposed to be
 
 #include &quot;.xres/xft&quot;
-#include &quot;.xres/colors/thunder&quot;
+#include &quot;.xres/colors/sea&quot;
 #include &quot;.xres/urxvt&quot;
 #include &quot;.xres/misc&quot;
 </pre></td></tr></table>
