--- a/git/dotfiles/file/x/.xres/colors/moonbow.html
+++ b/git/dotfiles/file/x/.xres/colors/moonbow.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> moonbow (563B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> moonbow (596B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -54,7 +54,11 @@
 <a href="#l36" id="l36">36</a>
 <a href="#l37" id="l37">37</a>
 <a href="#l38" id="l38">38</a>
+<a href="#l39" id="l39">39</a>
+<a href="#l40" id="l40">40</a>
 </pre></td><td><pre>
+! moonbow by inami
+
 ! special
 *.foreground:   #7b8695
 *.background:   #1b2227
@@ -80,7 +84,7 @@
 *.color4:       #424a64
 *.color12:      #626c94
 
-! orange
+! magenta (or orange)
 *.color5:       #4d3e4c
 *.color13:      #665064
 
