--- a/git/dotfiles/log.html
+++ b/git/dotfiles/log.html
@@ -18,6 +18,13 @@
 <table id="log"><thead>
 <tr><td>Date</td><td>Commit message</td><td>Author</td><td class="num">Files</td><td class="num">+</td><td class="num">-</td></tr>
 </thead><tbody>
+<tr><td>2016-07-20 12:57</td><td><a href="commit/ed12a0567b987090892d41d45137eeb31a91756a.html">of course it wasn&apos;t done!</a></td><td>Tudor</td><td class="num">1</td><td class="num">+15</td><td class="num">-13</td></tr>
+<tr><td>2016-07-20 11:55</td><td><a href="commit/f290350263767448c22a310220e05ec2f472a7f4.html">the popup system should be done</a></td><td>Tudor</td><td class="num">13</td><td class="num">+151</td><td class="num">-73</td></tr>
+<tr><td>2016-07-19 13:49</td><td><a href="commit/dac3ae7d6d6ea7313d17e5ffc517c6af04e001d0.html">color scheme: sea</a></td><td>Tudor</td><td class="num">9</td><td class="num">+124</td><td class="num">-13</td></tr>
+<tr><td>2016-07-18 14:41</td><td><a href="commit/5bbda87683cb6565a0a072afbfef5b1e5a991928.html">refactoring</a></td><td>Tudor</td><td class="num">5</td><td class="num">+14</td><td class="num">-9</td></tr>
+<tr><td>2016-07-16 17:44</td><td><a href="commit/bce2e3eadfe8ba5b02584d273f73f82454342267.html">misc fixes</a></td><td>Tudor</td><td class="num">3</td><td class="num">+3</td><td class="num">-13</td></tr>
+<tr><td>2016-07-16 16:55</td><td><a href="commit/30c805f80b43a68484de11af2d7a3f43b6b7a1da.html">misc</a></td><td>Tudor</td><td class="num">28</td><td class="num">+536</td><td class="num">-305</td></tr>
+<tr><td>2016-07-05 07:24</td><td><a href="commit/bedc4b2027fb59f295442e734d478c491044bfa8.html">trying this wm called bspwm</a></td><td>Tudor</td><td class="num">22</td><td class="num">+355</td><td class="num">-402</td></tr>
 <tr><td>2016-06-20 19:33</td><td><a href="commit/787ae18febf79ee214fcea05a7a3911c5bcf2b09.html">hack</a></td><td>Tudor</td><td class="num">1</td><td class="num">+1</td><td class="num">-0</td></tr>
 <tr><td>2016-06-15 15:38</td><td><a href="commit/c9f9a7cb3e4560ab437991a7ce9dc81ed44cd200.html">add shell prompt to its own file</a></td><td>Tudor</td><td class="num">2</td><td class="num">+19</td><td class="num">-19</td></tr>
 <tr><td>2016-06-15 15:25</td><td><a href="commit/11ca0d6a23770b8629885763fbdaecd1def6de6d.html">added submodules</a></td><td>Tudor</td><td class="num">4</td><td class="num">+7</td><td class="num">-2</td></tr>
