--- a/git/dotfiles/file/bspwm/.config/bspwm/bspwmrc.html
+++ b/git/dotfiles/file/bspwm/.config/bspwm/bspwmrc.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> bspwmrc (896B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> bspwmrc (783B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -42,49 +42,33 @@
 <a href="#l24" id="l24">24</a>
 <a href="#l25" id="l25">25</a>
 <a href="#l26" id="l26">26</a>
-<a href="#l27" id="l27">27</a>
-<a href="#l28" id="l28">28</a>
-<a href="#l29" id="l29">29</a>
-<a href="#l30" id="l30">30</a>
-<a href="#l31" id="l31">31</a>
-<a href="#l32" id="l32">32</a>
-<a href="#l33" id="l33">33</a>
-<a href="#l34" id="l34">34</a>
 </pre></td><td><pre>
-#! /bin/sh
+#!/bin/sh
 
-sxhkd -c &quot;$HOME/.config/sxhkd/sxhkdrc-bspwm&quot; &amp;
+bspc config border_width          $BW
+bspc config window_gap            $GENERAL_GAP
 
-if [ -e &quot;$BSPWM_STATE&quot; ]; then
-  bspc wm -l &quot;$BSPWM_STATE&quot;
-  rm &quot;$BSPWM_STATE&quot;
-fi
+bspc config split_ratio           0.5
+bspc config borderless_monocle    true
+bspc config gapless_monocle       true
+bspc config focus_by_distance     true
+bspc config history_aware_focus   true
+bspc config top_padding           $(( 2 * BW + PANEL_STATUS_HEIGHT + GENERAL_GAP ))
 
-bspc config window_gap          $GENERAL_GAP
-bspc config border_width        2
+bspc config normal_border_color   $(xrq &apos;*.color8&apos;)
+bspc config active_border_color   $(xrq &apos;*.color8&apos;)
+bspc config focused_border_color  $(xrq &apos;*.color6&apos;)
+bspc config presel_feedback_color $(xrq &apos;*.color3&apos;)
 
-bspc config split_ratio         0.50
-bspc config borderless_monocle  false
-bspc config gapless_monocle     false
-bspc config focus_by_distance   true
+for monitor in $(bspc query -M); do
+    bspc monitor $monitor -d A B C D
+done
 
-bspc config normal_border_color &quot;#273941&quot;
-#bspc config focused_border_color &quot;#71c2af&quot;
-bspc config focused_border_color &quot;$(bspc config normal_border_color)&quot;
-bspc config active_border_color &quot;$(bspc config normal_border_color)&quot;
+bspc rule -a chromium  desktop=^2
+bspc rule -a Firefox   desktop=^2
+bspc rule -a mpv       state=floating
 
-
-if [ $(bspc query -M | wc -l) -eq 2 ]; then
-  bspc monitor LVDS-1 -d 4 5 6
-  bspc monitor $(bspc query -M | grep -v &quot;LVDS-1&quot; | head -n 1) -d 1 2 3
-else
-  bspc monitor -d 1 2 3 4 5 6
-fi
-
-compton -b
-statusbar &amp;
-bspc config -m &quot;$(ppd)&quot; top_padding $(( PANEL_STATUS_HEIGHT + GENERAL_GAP ))
-wall-e &amp;
+wmname LG3D
 </pre></td></tr></table>
 </div>
 </body>
