--- a/git/dotfiles/file/bspwm/.config/sxhkd/sxhkdrc_bspwm.html
+++ b/git/dotfiles/file/bspwm/.config/sxhkd/sxhkdrc_bspwm.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> sxhkdrc_bspwm (1899B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> sxhkdrc_bspwm (2376B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -107,68 +107,130 @@
 <a href="#l89" id="l89">89</a>
 <a href="#l90" id="l90">90</a>
 <a href="#l91" id="l91">91</a>
+<a href="#l92" id="l92">92</a>
+<a href="#l93" id="l93">93</a>
+<a href="#l94" id="l94">94</a>
+<a href="#l95" id="l95">95</a>
+<a href="#l96" id="l96">96</a>
+<a href="#l97" id="l97">97</a>
+<a href="#l98" id="l98">98</a>
+<a href="#l99" id="l99">99</a>
+<a href="#l100" id="l100">100</a>
+<a href="#l101" id="l101">101</a>
+<a href="#l102" id="l102">102</a>
+<a href="#l103" id="l103">103</a>
+<a href="#l104" id="l104">104</a>
+<a href="#l105" id="l105">105</a>
+<a href="#l106" id="l106">106</a>
+<a href="#l107" id="l107">107</a>
+<a href="#l108" id="l108">108</a>
+<a href="#l109" id="l109">109</a>
+<a href="#l110" id="l110">110</a>
+<a href="#l111" id="l111">111</a>
+<a href="#l112" id="l112">112</a>
+<a href="#l113" id="l113">113</a>
+<a href="#l114" id="l114">114</a>
+<a href="#l115" id="l115">115</a>
+<a href="#l116" id="l116">116</a>
+<a href="#l117" id="l117">117</a>
+<a href="#l118" id="l118">118</a>
+<a href="#l119" id="l119">119</a>
+<a href="#l120" id="l120">120</a>
+<a href="#l121" id="l121">121</a>
+<a href="#l122" id="l122">122</a>
+<a href="#l123" id="l123">123</a>
 </pre></td><td><pre>
 #
-## bspwm hotkeys
+# wm independent hotkeys
 #
 
-# Quit bspwm and kill the panel
-super + alt + Escape
-#~/.scripts/exitbspwm
-  pkill panel; bspc quit 1
-super + alt + shift + Escape
-  pkill panel; bspc wm -d &gt; &quot;$BSPWM_STATE&quot;; bspc quit
-# Close the focused window
-super + w
-	bspc node -c
+# terminal emulator
+super + Return
+	urxvt
 
-# Toggle monocle layout
-super + n
+# program launcher
+super + space
+	dmenu_run
+
+# make sxhkd reload its configuration files:
+super + Escape
+	pkill -USR1 -x sxhkd
+
+#
+# bspwm hotkeys
+#
+
+# quit bspwm normally
+super + alt + Escape
+	bspc quit
+
+# close and kill
+super + {_,shift + }w
+	bspc node -{c,k}
+
+# alternate between the tiled and monocle layout
+super + m
 	bspc desktop -l next
 
-# Change selected window&apos;s mode into tiled, pseudo-tiled, floating or fullscreen
-super + {t,p,s,f}
+# if the current node is automatic, send it to the last manual, otherwise pull the last leaf
+super + y
+	bspc query -N -n focused.automatic &amp;&amp; bspc node -n last.!automatic || bspc node last.leaf -n focused
+
+#
+# state/flags
+#
+
+# set the window state
+super + {t,shift + t,s,f}
 	bspc node -t {tiled,pseudo_tiled,floating,fullscreen}
 
-# Focus the last window/desktop
-super + {grave,Tab}
-	bspc {node,desktop} -f last
+# set the node flags
+super + ctrl + {x,y,z}
+	bspc node -g {locked,sticky,private}
 
-# Swap the focused window with the last window
-super + apostrophe
-	bspc node -s last
+#
+# focus/swap
+#
 
-# Focus the next older/newer window
-super + {o,i}
-	bspc control --record-history off; \
-	bspc node {older,newer} -f; \
-	bspc control --record-history on
+# focus the node in the given direction
+alt + {h,j,k,l}
+    bspc node -f {west,south,north,east}
 
+# focus the node in the given direction
+super + shift + {h,j,k,l}
+	bspc node -s {west,south,north,east}
 
-super + y
-	bspc node -n last.!automatic
+# focus the node for the given path jump
+super + {p,b,comma,period}
+	bspc node -f @{parent,brother,first,second}
 
-super + m
-	bspc node -s biggest
-
-
-super + {_,shift + }{h,j,k,l}
-	bspc node -{f,s} {west,south,north,east}
-
-super + {_,shift + }c
+# focus the next/previous node
+alt + {_,shift + }Tab
 	bspc node -f {next,prev}
 
-super + {comma,period}
-	bspc desktop -C {backward,forward}
-
+# focus the next/previous desktop
 super + bracket{left,right}
 	bspc desktop -f {prev,next}
 
+# focus or send to the given desktop
+super + {_,shift + }{1-5,0}
+	bspc {desktop -f,node -d} &apos;^{1-9,10}&apos;
+
+#
+# preselect
+#
+
+# preselect the direction
 super + ctrl + {h,j,k,l}
 	bspc node -p {west,south,north,east}
 
-super + ctrl + {_,shift + }space
-	bspc {node -p cancel,desktop -c}
+# cancel the preselection for the focused node
+super + ctrl + space
+	bspc node -p cancel
+
+#
+# resize tiled/floating
+#
 
 # expand the tiled space in the given direction
 super + alt + {h,j,k,l}
@@ -178,27 +240,29 @@ super + alt + {h,j,k,l}
 super + alt + shift + {h,j,k,l}
 	bspc node {@east -r -10,@north -r +10,@south -r -10,@west -r +10}
 
-super + ctrl + {1-9}
-	bspc node -r 0.{1-9}
-
+# move a floating window
 super + {Left,Down,Up,Right}
-	xdo move {-x -20,-y +20,-y -20,-x +20}
+	wmv {-20 0,0 20,0 -20,20 0} $(pfw)
 
-super + {_,shift + }{1-9,0}
-	bspc {desktop -f,node -d} &apos;^{1-9,10}&apos;
+# move a floating window fast
+super + shift + {Left,Down,Up,Right}
+	wmv {-50 0,0 50,0 -50,50 0} $(pfw)
 
-super + shift + s
-  bspc node -g sticky
+#
+# pointer focus/move/resize
+#
 
+# focus
 ~button1
 	bspc pointer -g focus
 
+# start move/resize
 super + button{1-3}
 	; bspc pointer -g {move,resize_side,resize_corner}
 
+# end move/resize
 super + @button{1-3}
 	bspc pointer -u
-
 </pre></td></tr></table>
 </div>
 </body>
