--- a/git/dotfiles/file/nvim/.config/nvim/.init.vim-rplugin~.html
+++ b/git/dotfiles/file/nvim/.config/nvim/.init.vim-rplugin~.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .init.vim-rplugin~ (270B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .init.vim-rplugin~ (266B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -30,7 +30,7 @@
 <a href="#l12" id="l12">12</a>
 </pre></td><td><pre>
 &quot; python3 plugins
-call remote#host#RegisterPlugin(&apos;python3&apos;, &apos;/usr/home/tudurom/.config/nvim/bundle/deoplete.nvim/rplugin/python3/deoplete&apos;, [
+call remote#host#RegisterPlugin(&apos;python3&apos;, &apos;/home/tudurom/.config/nvim/bundle/deoplete.nvim/rplugin/python3/deoplete&apos;, [
       \ {&apos;sync&apos;: v:true, &apos;name&apos;: &apos;_deoplete&apos;, &apos;type&apos;: &apos;function&apos;, &apos;opts&apos;: {}},
      \ ])
 
