--- a/git/dotfiles/file/vimperator/.vimperator/colors/moonbow.vimp.html
+++ b/git/dotfiles/file/vimperator/.vimperator/colors/moonbow.vimp.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> moonbow.vimp (4518B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> moonbow.vimp (4504B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -93,23 +93,23 @@
 &quot; ==Ocean_Colorscheme_Settings==
 
 &quot;StatusLine settings
-hi StatusLine           color: #7b8695; background: #1b2227; font-size: 7pt; font: &quot;GohuFont&quot;;
-&quot; hi StatusLineBroken     color: #7b8695; background: #afafff; font-size: 7pt; font: &quot;GohuFont&quot;;
-&quot; hi StatusLineSecure     color: #7b8695; background: #afffaf; font-size: 7pt; font: &quot;GohuFont&quot;;
+hi StatusLine           color: #7b8695; background: #1b2227; font-size: 8pt; font: monospace;
+&quot; hi StatusLineBroken     color: #7b8695; background: #afafff; font-size: 8pt; font: monospace;
+&quot; hi StatusLineSecure     color: #7b8695; background: #afffaf; font-size: 8pt; font: monospace;
 
 &quot;CmdLine settings excluding Gradient
 hi Normal               color: #7b8695; background: #1b2227;
-hi CmdLine              background:#1b2227; color: #7b8695; font-family: &quot;GohuFont&quot;; font-size: 7pt;
-hi CompDesc             color: #c6c6c6; width: 50%; font-family: &quot;GohuFont&quot;; font-size: 7pt;
+hi CmdLine              background:#1b2227; color: #7b8695; font-family: monospace; font-size: 8pt;
+hi CompDesc             color: #c6c6c6; width: 50%; font-family: monospace; font-size: 8pt;
 hi CompIcon             width: 16px; min-width: 16px; display: inline-block; margin-right: .5ex;
-hi CompItem[selected]   background: #1b2227; color: #8a6270; font-family: &quot;GohuFont&quot;;
+hi CompItem[selected]   background: #1b2227; color: #8a6270; font-family: monospace;
 &quot; hi CompLess             text-align: center; height: 0; line-height: .5ex; padding-top: 1ex;
 &quot; hi CompMore             text-align: center; height: .5ex; line-height: .5ex; margin-bottom: -.5ex;
-hi CompMsg              font-family: &quot;GohuFont&quot;; font-style: &quot;GohuFont&quot;; margin-left: 16px; font-size: 7pt;
-hi CompResult           width: 45%; overflow: hidden;font-size: 7pt; font-family: &quot;GohuFont&quot;; font-weight: normal;
-hi CompTitle            color: #7b8695; background: #1b2227; font-weight: bold; font-family: &quot;GohuFont&quot;; font-size: 7pt;
-hi CompTitle&gt;*          padding: 0 .5ex; font-family: &quot;GohuFont&quot;; font-size: 7pt;
-hi Filter               font-weight: bold;color: #7b8695; font-family: &quot;GohuFont&quot;; font-size: 7pt;
+hi CompMsg              font-family: monospace; font-style: monospace; margin-left: 16px; font-size: 8pt;
+hi CompResult           width: 45%; overflow: hidden;font-size: 8pt; font-family: monospace; font-weight: normal;
+hi CompTitle            color: #7b8695; background: #1b2227; font-weight: bold; font-family: monospace; font-size: 8pt;
+hi CompTitle&gt;*          padding: 0 .5ex; font-family: monospace; font-size: 8pt;
+hi Filter               font-weight: bold;color: #7b8695; font-family: monospace; font-size: 8pt;
 
 &quot;When using tab complete in CmdLine, line separating Title from function and description
 &quot; hi Gradient             height: 1px; margin-bottom: -1px; margin-top: -1px;
@@ -124,8 +124,8 @@ hi ErrorMsg             color: #2b303b; background: #bf616a; font-weight: bold;
 
 
 &quot;Hint section
-&quot;hi Hint                 font-family: &quot;GohuFont&quot;; font-size: 10px; font-weight: bold; color: #f6e9e9; background-color: red; border-color: ButtonShadow; border-width: 0px; border-style: solid; padding 0px 1px 0px 1px;
-hi Hint               	font-family: &quot;GohuFont&quot;; font-size: 12px; font-weight: bold; color: #bf616a; background-color: #2b303b; border: solid 1px #65737e;
+&quot;hi Hint                 font-family: monospace; font-size: 10px; font-weight: bold; color: #f6e9e9; background-color: red; border-color: ButtonShadow; border-width: 0px; border-style: solid; padding 0px 1px 0px 1px;
+hi Hint               	font-family: monospace; font-size: 12px; font-weight: bold; color: #bf616a; background-color: #2b303b; border: solid 1px #65737e;
 hi Hint::after          content: attr(number);
 hi HintActive           background: #8fa1b3; color: #94a1b3;
 hi HintElem             background-color: #2b303b; color: #a3be8c;
