--- a/git/dotfiles/file/vimperator/.vimperatorrc.html
+++ b/git/dotfiles/file/vimperator/.vimperatorrc.html
@@ -15,12 +15,12 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .vimperatorrc (33B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .vimperatorrc (29B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
 </pre></td><td><pre>
-colo thunder
+colo sea
 
 &quot; vim: set ft=vim:
 </pre></td></tr></table>
