--- a/git/dotfiles/file/wmrc/.scripts/notifyd.html
+++ b/git/dotfiles/file/wmrc/.scripts/notifyd.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> notifyd (1046B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> notifyd (1245B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -55,6 +55,15 @@
 <a href="#l37" id="l37">37</a>
 <a href="#l38" id="l38">38</a>
 <a href="#l39" id="l39">39</a>
+<a href="#l40" id="l40">40</a>
+<a href="#l41" id="l41">41</a>
+<a href="#l42" id="l42">42</a>
+<a href="#l43" id="l43">43</a>
+<a href="#l44" id="l44">44</a>
+<a href="#l45" id="l45">45</a>
+<a href="#l46" id="l46">46</a>
+<a href="#l47" id="l47">47</a>
+<a href="#l48" id="l48">48</a>
 </pre></td><td><pre>
 #!/bin/sh
 #
@@ -62,11 +71,12 @@
 # (c) tudurom 2016 - wtfpl
 #
 
-NOTIFY_FIFO_PATH=${NOTIFY_FIFO_PATH:-$HOME/tmp/notifyd.fifo}
-NOTIFY_COUNTER_PATH=${NOTIFY_COUNTER_PATH:-$HOME/tmp/notifyd.cnt}
+NOTIFY_FIFO_PATH=&quot;${NOTIFY_FIFO_PATH:-/tmp/notifyd.fifo}&quot;
+NOTIFY_COUNTER_PATH=&quot;${NOTIFY_COUNTER_PATH:-/tmp/notifyd.cnt}&quot;
 
 # create fifo
 test -p $NOTIFY_FIFO_PATH || mkfifo $NOTIFY_FIFO_PATH
+rm &quot;$NOTIFY_COUNTER_PATH&quot;; echo &quot;0&quot; &gt; &quot;$NOTIFY_COUNTER_PATH&quot;
 
 # display vars
 DISPLAY_X=&quot;$(dattr -x `ppd`)&quot;
@@ -74,26 +84,34 @@ DISPLAY_Y=&quot;$(dattr -y `ppd`)&quot;
 DISPLAY_W=&quot;$(dattr -w `ppd`)&quot;
 DISPLAY_H=&quot;$(dattr -h `ppd`)&quot;
 
-NOTIFY_W=&quot;$(( 110 + 2 * GENERAL_GAP ))&quot;
-NOTIFY_H=&quot;$PANEL_STATUS_HEIGHT&quot;
-NOTIFY_X=&quot;$(( DISPLAY_X + DISPLAY_W - NOTIFY_W - GENERAL_GAP ))&quot;
-NOTIFY_Y=&quot;$(( DISPLAY_Y + DISPLAY_H - NOTIFY_H - GENERAL_GAP ))&quot;
+space_len=&quot;$(txtw -f &quot;PANEL_FONT_NAME&quot; &quot; &quot;)&quot;
+NOTIFY_H=&quot;$(( $PANEL_STATUS_HEIGHT ))&quot;
+NOTIFY_Y=&quot;$(( DISPLAY_Y + GENERAL_GAP ))&quot;
 
-n=0
-echo &quot;$n&quot; &gt; &quot;$NOTIFY_COUNTER_PATH&quot;
+gn() {
+    cat &quot;$NOTIFY_COUNTER_PATH&quot;
+}
+
+sn() {
+    echo &quot;$1&quot; &gt; &quot;$NOTIFY_COUNTER_PATH&quot;
+}
+
+sn &quot;0&quot;
+
 tail -f &quot;$NOTIFY_FIFO_PATH&quot; | \
 while IFS= read -r message; do
-  # increment counter
-  n=&quot;$(cat &quot;$NOTIFY_COUNTER_PATH&quot;)&quot;
-  n=&quot;$(( n + 1 ))&quot;
-  echo &quot;$n&quot; &gt; &quot;$NOTIFY_COUNTER_PATH&quot;
+    # increment counter
+    sn &quot;$(( $(gn) + 1 ))&quot;
 
-  {
-      popup $NOTIFY_X $(( NOTIFY_Y - (NOTIFY_H + GENERAL_GAP) * (n - 1) )) $NOTIFY_W $NOTIFY_H &quot;$message&quot;
-    n=&quot;$(cat &quot;$NOTIFY_COUNTER_PATH&quot;)&quot;
-    n=&quot;$(( n - 1 ))&quot;
-    echo &quot;$n&quot; &gt; &quot;$NOTIFY_COUNTER_PATH&quot;
-  } &amp;
+    {
+        NOTIFY_W=&quot;$(( 4 * space_len + $(txtw -f &quot;$PANEL_FONT_NAME&quot; &quot;$(echo &quot;$message&quot; | tr -cd &apos;[[:alnum:]]._-&apos;)&quot;)  ))&quot;
+        NOTIFY_X=&quot;$(( DISPLAY_X + DISPLAY_W - (GENERAL_GAP + NOTIFY_W + 2 * BW) ))&quot;
+        NOTIFY_Y=&quot;$(( DISPLAY_Y + GENERAL_GAP + ( $(gn) - 1 ) * (NOTIFY_H + GENERAL_GAP) ))&quot;
+        popup $NOTIFY_X $NOTIFY_Y $NOTIFY_W $NOTIFY_H &quot;$message&quot;
+
+        # decrement the counter
+        sn &quot;$(( $(gn) - 1 ))&quot;
+    } &amp;
 done
 </pre></td></tr></table>
 </div>
