--- a/git/dotfiles/file/wmrc/.scripts/panelsrc.html
+++ b/git/dotfiles/file/wmrc/.scripts/panelsrc.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> panelsrc (307B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> panelsrc (465B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -26,15 +26,27 @@
 <a href="#l8" id="l8">8</a>
 <a href="#l9" id="l9">9</a>
 <a href="#l10" id="l10">10</a>
+<a href="#l11" id="l11">11</a>
+<a href="#l12" id="l12">12</a>
+<a href="#l13" id="l13">13</a>
+<a href="#l14" id="l14">14</a>
+<a href="#l15" id="l15">15</a>
+<a href="#l16" id="l16">16</a>
 </pre></td><td><pre>
 # Standard variables for panels
 # (c) tudurom 2016 - wtfpl
 
 #export PANEL_FONT=&quot;-*-erusfont-medium-*-*-*-11-*-*-*-*-*-*-*&quot;
-export PANEL_FONT=&quot;-*-tangerine-medium-*-*-*-10-*-*-*-*-*-*-*&quot;
+export PANEL_FONT=&quot;-*-yuki-*-*-*-*-10-*-*-*-*-*-*-*&quot;
 export PANEL_ICON_FONT=&quot;-wuncon-siji-medium-*-*-*-10-*-*-*-*-*-*-*&quot;
+export PANEL_FONT_NAME=&quot;lemon&quot;
+export PANEL_ICON_FONT_NAME=&quot;siji&quot;
 
 export PANEL_STATUS_HEIGHT=&quot;30&quot;
+export PANEL_BG_COLOR=&quot;`xrq &apos;*.background&apos;`&quot;
+
+export PANEL_INNER_GAP=&quot;20&quot;
+export PANEL_OUTER_GAP=&quot;20&quot;
 
 # vim: set ft=sh :
 </pre></td></tr></table>
