--- a/git/dotfiles/file/x/.xinitrc.html
+++ b/git/dotfiles/file/x/.xinitrc.html
@@ -15,7 +15,7 @@
 <a href="../../log.html">Log</a> | <a href="../../files.html">Files</a> | <a href="../../refs.html">Refs</a> | <a href="../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> .xinitrc (1302B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> .xinitrc (852B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -67,29 +67,6 @@
 <a href="#l49" id="l49">49</a>
 <a href="#l50" id="l50">50</a>
 <a href="#l51" id="l51">51</a>
-<a href="#l52" id="l52">52</a>
-<a href="#l53" id="l53">53</a>
-<a href="#l54" id="l54">54</a>
-<a href="#l55" id="l55">55</a>
-<a href="#l56" id="l56">56</a>
-<a href="#l57" id="l57">57</a>
-<a href="#l58" id="l58">58</a>
-<a href="#l59" id="l59">59</a>
-<a href="#l60" id="l60">60</a>
-<a href="#l61" id="l61">61</a>
-<a href="#l62" id="l62">62</a>
-<a href="#l63" id="l63">63</a>
-<a href="#l64" id="l64">64</a>
-<a href="#l65" id="l65">65</a>
-<a href="#l66" id="l66">66</a>
-<a href="#l67" id="l67">67</a>
-<a href="#l68" id="l68">68</a>
-<a href="#l69" id="l69">69</a>
-<a href="#l70" id="l70">70</a>
-<a href="#l71" id="l71">71</a>
-<a href="#l72" id="l72">72</a>
-<a href="#l73" id="l73">73</a>
-<a href="#l74" id="l74">74</a>
 </pre></td><td><pre>
 #!/bin/sh
 
@@ -99,54 +76,26 @@
 # by tudurom
 # no login manager since forever
 
-# Strange things from the default .xinitrc {{{
-userresources=$HOME/.Xresources
-usermodmap=$HOME/.Xmodmap
-sysresources=/etc/X11/xinit/.Xresources
-sysmodmap=/etc/X11/xinit/.Xmodmap
+# Load X resources
+xrdb $HOME/.Xresources
 
-# merge in defaults and keymaps
-
-if [ -f $sysresources ]; then
-    xrdb -merge $sysresources
-fi
-
-if [ -f $sysmodmap ]; then
-    xmodmap $sysmodmap
-fi
-
-if [ -f &quot;$userresources&quot; ]; then
-    xrdb -merge &quot;$userresources&quot;
-fi
-
-if [ -f &quot;$usermodmap&quot; ]; then
-    xmodmap &quot;$usermodmap&quot;
-fi
-
-# start some nice programs
-
-if [ -d /etc/X11/xinit/xinitrc.d ] ; then
- for f in /etc/X11/xinit/xinitrc.d/?*.sh ; do
-  [ -x &quot;$f&quot; ] &amp;&amp; . &quot;$f&quot;
- done
- unset f
-fi
-# }}}
+# Load .profile (contains settings)
+. $HOME/.profile
 
 # Load fonts
 xset +fp ~/.fonts
 xset fp rehash
 
-# Start nice programs {{{
+# Start nice programs
 
-xmodmap ~/.xmodmaprc
+xmodmap $HOME/.xmodmaprc
 # URxvt clipboard magic
 autocutsel -selection clipboard -fork
 
 # Multi monitor
 screenlayout
 # Github: airblader/unclutter-xfixes
-# unclutter -b
+unclutter -b
 
 # Music!
 if ! pidof mpd; then
@@ -161,10 +110,15 @@ compton -b
 # Wallpaper
 wall-e &amp;
 
-# }}}
+# Java fix
+wmname LG3D
 
-statusbar &amp;
-exec startwm cwm
+# Start the thing
+minbar &amp;
+for s in $HOME/bin/notifyd-*; do
+    $s &amp;
+done
+exec startwm bspwm
 </pre></td></tr></table>
 </div>
 </body>
