--- a/git/dotfiles/file/x/.xres/colors/woody.html
+++ b/git/dotfiles/file/x/.xres/colors/woody.html
@@ -15,7 +15,7 @@
 <a href="../../../../log.html">Log</a> | <a href="../../../../files.html">Files</a> | <a href="../../../../refs.html">Refs</a> | <a href="../../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> woody (727B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> woody (596B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -56,14 +56,8 @@
 <a href="#l38" id="l38">38</a>
 <a href="#l39" id="l39">39</a>
 <a href="#l40" id="l40">40</a>
-<a href="#l41" id="l41">41</a>
-<a href="#l42" id="l42">42</a>
-<a href="#l43" id="l43">43</a>
 </pre></td><td><pre>
-# ╻ ╻┏━┓┏━┓╺┳┓╻ ╻
-# ┃╻┃┃ ┃┃ ┃ ┃┃┗┳┛
-# ┗┻┛┗━┛┗━┛╺┻┛ ╹
-# brownish light theme by tudurom
+! woody by tudurom
 
 ! special
 *.foreground:   #3f3a3c
@@ -90,7 +84,7 @@
 *.color4:       #486078
 *.color12:      #3e5e87
 
-! orange
+! magenta (or orange)
 *.color5:       #784878
 *.color13:      #873e87
 
