--- a/git/dotfiles/file/x/.xres/urxvt.html
+++ b/git/dotfiles/file/x/.xres/urxvt.html
@@ -15,7 +15,7 @@
 <a href="../../../log.html">Log</a> | <a href="../../../files.html">Files</a> | <a href="../../../refs.html">Refs</a> | <a href="../../../file/.gitmodules.html">Submodules</a></td></tr></table>
 <hr/>
 <div id="content">
-<p> urxvt (482B)</p><hr/><table id="blob"><tr><td class="num"><pre>
+<p> urxvt (490B)</p><hr/><table id="blob"><tr><td class="num"><pre>
 <a href="#l1" id="l1">1</a>
 <a href="#l2" id="l2">2</a>
 <a href="#l3" id="l3">3</a>
@@ -33,8 +33,10 @@
 <a href="#l15" id="l15">15</a>
 <a href="#l16" id="l16">16</a>
 <a href="#l17" id="l17">17</a>
+<a href="#l18" id="l18">18</a>
 </pre></td><td><pre>
-*.font: -*-gohufont-medium-*-*-*-14-*-*-*-*-*-*-*, xft:Symbola
+*.font: -*-gohufont-medium-*-*-*-11-*-*-*-*-*-*-*
+URxvt.letterSpace: 0
 ! No bold font
 URxvt.boldFont:
 *.scrollBar: false
