--- a/git/dotfiles/index.html
+++ b/git/dotfiles/index.html
@@ -1,24 +1,1 @@
-<!DOCTYPE html>
-<html dir="ltr" lang="en">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<meta http-equiv="Content-Language" content="en" />
-<title>Repositories</title>
-<link rel="icon" type="image/png" href="favicon.png" />
-<link rel="stylesheet" type="text/css" href="style.css" />
-</head>
-<body>
-<table>
-<tr><td><img src="logo.png" alt="" width="32" height="32" /></td>
-<td><h1></h1><span class="desc">Repositories</span></td></tr><tr><td></td><td>
-</td></tr>
-</table>
-<hr/>
-<div id="content">
-<table id="index"><thead>
-<tr><td>Name</td><td>Description</td><td>Owner</td><td>Last commit</td></tr></thead><tbody>
-</tbody>
-</table>
-</div>
-</body>
-</html>
+/srv/http/git/dotfiles/log.html
